apps/base/media/sonarr/sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://sonarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/description: "TV series organizer/manager"
    gethomepage.dev/app: sonarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/sonarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`sonarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: sonarr
          port: 8989
  tls: {}
